# RAG-Debugger

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  docker-compose.yml  justfile
.github/: labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  feature.yml  performance.yml  security_privacy.yml  tech_debt.yml  ui_polish.yml
.github/workflows/: ci.yml
apps/api/: Cargo.toml
apps/api/src/: auth.rs  config.rs  demo.rs  error.rs  ingestion.rs  lib.rs  main.rs  state.rs  telemetry.rs
apps/api/src/http/: api_keys.rs  auth_routes.rs  ci_eval.rs  config.rs  demo.rs  embeddings.rs  eval_lab.rs  evals.rs  health.rs  mod.rs  overview.rs  reports.rs  retrieval.rs  routing.rs  sources.rs  traces.rs
apps/api/tests/: auth_ci.rs  demo.rs  eval_lab.rs  health.rs  overview.rs  reports.rs  retrieval.rs  sources.rs  traces.rs
apps/web/: .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.node.json  vite.config.ts
apps/web/scripts/: check-bundle-budget.mjs  generate-marketing-screenshots.mjs  render-technical-handbook.mjs
apps/web/src/: App.test.tsx  App.tsx  setupTests.ts  styles.css
crates/core/: Cargo.toml
crates/core/src/: auth.rs  chunk.rs  ci_eval.rs  config.rs  demo.rs  diagnosis.rs  embedding.rs  eval.rs  health.rs  ingestion.rs  lib.rs  model.rs  overview.rs  privacy.rs  project.rs  report.rs  retrieval.rs  source.rs  trace.rs  wire_time.rs
crates/core/tests/: answerability_contract.rs  demo_contract.rs  diagnosis_contract.rs  report_contract.rs
crates/rag/: Cargo.toml
crates/rag/src/: answer.rs  answerability.rs  chunking.rs  diagnosis.rs  embedding.rs  evals.rs  extraction.rs  ingestion.rs  intelligence.rs  lib.rs  retrieval.rs  text.rs  tracing.rs
crates/rag/src/diagnosis/: comparison.rs  recommendations.rs  rules.rs  tests.rs
crates/rag/src/reports/: ci.rs  evidence.rs  experiment.rs  markdown.rs  mod.rs  privacy.rs  recommendations.rs  trace.rs
crates/rag/tests/: public_fixtures.rs  report_builders.rs  report_markdown_snapshots.rs
crates/rag/tests/fixtures/reports/: ci.md  eval.md  metadata-only.md  snippets-allowed.md  trace.md
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs  memory.rs  postgres.rs  repository.rs
crates/storage/src/postgres/: auth.rs  ci_eval.rs  codec.rs  demo.rs  embeddings.rs  eval_lab.rs  ingestion.rs  projects.rs  reports.rs  retrieval.rs  traces.rs
crates/storage/tests/: memory_store_contract.rs  report_store_contract.rs
docs/: architecture.md  auth-and-workspaces.md  ci-eval-workflows.md  development.md  doc-maintenance.md  engineering-quality.md  eval-lab.md  file-ingestion.md  frontend-architecture.md  guided-demo.md  guided-workbench.md  logging-redaction.md  marketing-experience.md  privacy-review-checklist.md  privacy-security.md  rag-audit-reports.md  rag-invariants.md  retrieval-playground.md  roadmap.md  technical-handbook.md  testing.md  trace-debugger.md
docs/adr/: 0001-rust-workspace-monorepo.md  0002-axum-sqlx.md  0003-hybrid-local-cloud.md  0004-react-typescript-ui.md
docs/examples/: github-actions-corpuslab-evals.yml
fixtures/corpora/policy_docs/: data-retention.md
fixtures/corpora/support_kb/: account-recovery.md
fixtures/corpora/technical_docs/: gpu-indexing.md
fixtures/expected/: eval_lab_cases.json  retrieval_cases.json  trace_cases.json
migrations/: 20260623193000_file_ingestion.sql  20260623203000_smart_chunking.sql  20260623213000_retrieval_playground.sql  20260624093000_semantic_retrieval.sql  20260624103000_document_intelligence.sql  20260624113000_trace_debugger.sql  20260625130000_eval_lab.sql  20260625170000_hosted_ci_eval_workflows.sql  20260630120000_rag_audit_reports.sql
(+185 files in other folders)
