[package]
name = "rag-debugger-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
argon2.workspace = true
axum.workspace = true
hex.workspace = true
mime_guess.workspace = true
rag-debugger-core.workspace = true
rag-debugger-rag.workspace = true
rag-debugger-storage.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
http.workspace = true
